--- a/iWork.Web.UI/Content/css/control.scss
+++ b/iWork.Web.UI/Content/css/control.scss
@@ -62,6 +62,12 @@
     overflow: hidden;
     padding: 0px;
     margin: 0px;
+    transition:none;
+}
+.slick-list {
+    width:100%;
+    float:left;
+     transition:none;
 }
 /* Search Box
 ----------------------------------------------------------------*/
