--- a/iWork.Web.UI/Template/Default/Controls/grid/datatables.html
+++ b/iWork.Web.UI/Template/Default/Controls/grid/datatables.html
@@ -1,97 +1,120 @@
 ﻿<control iv-controller="gridController"
-         iv-title="Grid Title"
+         iv-title="false"
          iv-url="false"
          iv-serverside="false"
+         iv-searching="true"
+         iv-paging="true"
          iv-pagination-type="full_numbers"
-         iv-display-length="1"
+         iv-display-length="10"
+         iv-dom='flptip'
+         iv-info="true"
+         iv-state-save="false"
+         iv-length-menu=" [ 15, 30, 60,100 ]"
+         iv-page-length="15"
          iv-ordering="true">
+
     <div ng-controller="$iv-controller">
-        <h3>$iv-title</h3>
+        <h3 ng-show="hideTitle">$iv-title</h3>
         <table id="$iv-controller" class="table row-border hover">
             <iv-content></iv-content>
         </table>
     </div>
     <script>
         function $iv-controller($rootScope,$scope, $element, $location, $window, $http)  {
+            $.fn.dataTableExt.sErrMode = 'throw';
+            $scope.hideTitle = '$iv-title' !== 'false';
             $scope.initDatatable = function(){
                 var dtOptions = {
+                    dom:'$iv-dom',
                     serverSide: $iv-serverside,
                     paginationType: '$iv-pagination-type',
                     displayLength: $iv-display-length,
                     ordering: $iv-ordering,
+                    paging: $iv-paging,
+                    searching: $iv-searching,
+                    info: $iv-info,
+                    stateSave:$iv-state-save,
+                    lengthMenu:$iv-length-menu,
+                    pageLength: $iv-page-length,
                     drawCallback: function( settings ) {
                         $(window).trigger('resize');
                     },
-                    rowCallback: function( row, data ) {
-                        var columnDef = $iv-controller_aoColumns;
-                        var $row = $(row);
-                        $.each(columnDef,function(index,config){
-                            if(config.type == 'btn.edite'){
-                                var column = $($row.find('td')[index])
-                                column.empty();
-                                column.append($('<span class="update-entity glyphicon glyphicon-pencil" data-entity-id="1" data-model="Contact" data-target-form="contactForm"></span>'));
-                            }else if(config.type == 'btn.delete'){
-                                var column = $($row.find('td')[index])
-                                column.empty();
-                                column.append($('<span class="remove-entity glyphicon glyphicon-trash" data-entity-id="5" data-model="Contact" data-confirm="true"></span>'));
-                            }
-                        });
-                    },
-                    preDrawCallback: function( settings ) {
-                        $iv-controller_aoColumns = settings.aoColumns;
-                    },
-                    columns:[
-
-                    ]
-                }
-                $element.find('th').each(function () {
-                    var $this = $(this);
-                    var colDef = {
-                        data: $this.data('data'),
-                        aTargets: $this.data('atargets'),
-                        title: $this.data('title'),
-                        cellType: $this.data('cell-type'),
-                        className: $this.data('class-name'),
-                        contentPadding: $this.data('content-padding'),
-                        createdCell: $this.data('created-cell'),
-                        defaultContent: $this.data('default-content'),
-                        name: $this.data('name'),
-                        orderable: $this.data('orderable'),
-                        //orderData: $this.data('atargets'),
-                        //orderDataType: $this.data('order-data-type'),
-                        render: $this.data('render'),
-                        searchable: $this.data('searchable'),
-                        type: $this.data('kind'),
-                        visible: $this.data('visible'),
-                        width: $this.data('width'),
-                        bSortable: false
-                    }
-                    dtOptions.columns.push(colDef);
-                    $this.remove();
-                });
-
-
-                if('$iv-observe' !== 'false' && '$iv-url' == 'false'){
-                    $scope.$on('$iv-observe', function(event, args) {
-                        $scope.reload(args)
+                rowCallback: function( row, data ) {
+                    var columnDef = $iv-controller_aoColumns;
+                    var $row = $(row);
+                    $.each(columnDef,function(index,config){
+                        if(config.type == 'btn.edite'){
+                            var column = $($row.find('td')[index])
+                            column.empty();
+                            column.append($('<span class="update-entity glyphicon glyphicon-pencil" data-entity-id="1" data-model="Contact" data-target-form="contactForm"></span>'));
+                        }else if(config.type == 'btn.delete'){
+                            var column = $($row.find('td')[index])
+                            column.empty();
+                            column.append($('<span class="remove-entity glyphicon glyphicon-trash" data-entity-id="5" data-model="Contact" data-confirm="true"></span>'));
+                        }
                     });
-                }else{
-                    dtOptions.ajax = {
-                        url : '$iv-url'
-                    }
+                    $(window).trigger('resize');
+                },
+                preDrawCallback: function( settings ) {
+                    $iv-controller_aoColumns = settings.aoColumns;
+                },
+                columns:[
 
-                }
-                $scope.oTable = $element.find('table').dataTable(dtOptions);
-                //window.ofh = new FixedHeader( dt, {
-                //    "offsetTop": 70
-                //});
+                ]
             }
-            $scope.initDatatable();
-            $scope.reload = function(newData){
-                oTable.fnClearTable();
-                oTable.fnAddData(newData)
+            $element.find('th').each(function () {
+                var $this = $(this);
+                var colDef = {
+                    data: $this.data('data'),
+                    aTargets: $this.data('atargets'),
+                    title: $this.data('title'),
+                    cellType: $this.data('cell-type'),
+                    className: $this.data('class-name'),
+                    contentPadding: $this.data('content-padding'),
+                    createdCell: $this.data('created-cell'),
+                    defaultContent: $this.data('default-content'),
+                    name: $this.data('name'),
+                    orderable: $this.data('orderable'),
+                    //orderData: $this.data('atargets'),
+                    //orderDataType: $this.data('order-data-type'),
+                    render: $this.data('render'),
+                    searchable: $this.data('searchable'),
+                    type: $this.data('kind'),
+                    visible: $this.data('visible'),
+                    width: $this.data('width'),
+                    bSortable: false
+                }
+                dtOptions.columns.push(colDef);
+                $this.remove();
+            });
+            if('$iv-observe' !== 'false' && '$iv-url' == 'false'){
+                dtOptions.data = [];
+                $element.hide();
+            }else{
+                dtOptions.ajax = {
+                    url : '$iv-url'
+                }
+            }
+            $scope.oTable = $element.find('table').dataTable(dtOptions);
+            //window.ofh = new FixedHeader( dt, {
+            //    "offsetTop": 70
+            //});
+        }
+        $scope.initDatatable();
+        if('$iv-observe' !== 'false' && '$iv-url' == 'false'){
+            $scope.$on('$iv-observe', function(event, args) {
+                $scope.reload(args.Data);
+            });
+        }
+        $scope.reload = function(newData){
+            if(newData.length > 0){
+                $element.show();
+                $scope.oTable.fnClearTable();
+                $scope.oTable.fnAddData(newData);
+            }else{
+                $element.hide();
             }
         }
+        }
     </script>
-
 </control>
