--- a/iWork.Web.UI/Template/Default/Controls/grid/datatables.html
+++ b/iWork.Web.UI/Template/Default/Controls/grid/datatables.html
@@ -1,4 +1,5 @@
-﻿<control iv-controller="gridController"
+﻿<!--    Datatables self data loader -->
+<control iv-controller="gridController"
          iv-title="false"
          iv-url="false"
          iv-serverside="false"
@@ -11,7 +12,8 @@
          iv-state-save="false"
          iv-length-menu=" [ 15, 30, 60,100 ]"
          iv-page-length="15"
-         iv-ordering="true">
+         iv-ordering="true"
+         iv-auto-load="true">
 
     <div ng-controller="$iv-controller">
         <h3 ng-show="hideTitle">$iv-title</h3>
@@ -24,7 +26,7 @@
             $.fn.dataTableExt.sErrMode = 'throw';
             $scope.hideTitle = '$iv-title' !== 'false';
             $scope.initDatatable = function(){
-                var dtOptions = {
+                $scope.dtOptions = {
                     dom:'$iv-dom',
                     serverSide: $iv-serverside,
                     paginationType: '$iv-pagination-type',
@@ -36,85 +38,123 @@
                     stateSave:$iv-state-save,
                     lengthMenu:$iv-length-menu,
                     pageLength: $iv-page-length,
+                    fnServerData: function (sUrl, aoData, fnCallback, oSettings) {
+                        if($scope.filteringForm){
+                            $scope.filteringForm.find('button').button('loading');
+                        }
+                        var fnCallback2 = function (json) {
+                            fnCallback(json);
+                            return false;
+                        };
+                        if(aoData.length > 0){
+                            var requestData = {
+                                draw:aoData[0].value,
+                                columns: aoData[1].value,
+                                order: aoData[2].value,
+                                start: aoData[3].value,
+                                lenght: aoData[4].value,
+                                search: aoData[5].value,
+                            };
+                        }else{
+                            requestData={}
+                        }
+                        if('$iv-observe' !== 'false'){
+                            requestData.formData = $scope.filteringFormData
+                        }
+                        oSettings.jqXHR = $.ajax({
+                            url: oSettings.ajax.url,
+                            crossDomain: true,
+                            data: requestData,
+                            type: "GET", //TODO : Get has been change to post by pouya
+                            timeout: 10000,
+                            success: fnCallback2,
+                            complete:function(){
+                                if($scope.filteringForm){
+                                    $scope.filteringForm.find('button').button('reset');
+                                }
+                            },
+                            cache: false
+                        });
+                    },
                     drawCallback: function( settings ) {
                         $(window).trigger('resize');
                     },
-                rowCallback: function( row, data ) {
-                    var columnDef = $iv-controller_aoColumns;
-                    var $row = $(row);
-                    $.each(columnDef,function(index,config){
-                        if(config.type == 'btn.edite'){
-                            var column = $($row.find('td')[index])
-                            column.empty();
-                            column.append($('<span class="update-entity glyphicon glyphicon-pencil" data-entity-id="1" data-model="Contact" data-target-form="contactForm"></span>'));
-                        }else if(config.type == 'btn.delete'){
-                            var column = $($row.find('td')[index])
-                            column.empty();
-                            column.append($('<span class="remove-entity glyphicon glyphicon-trash" data-entity-id="5" data-model="Contact" data-confirm="true"></span>'));
-                        }
-                    });
-                    $(window).trigger('resize');
-                },
-                preDrawCallback: function( settings ) {
-                    $iv-controller_aoColumns = settings.aoColumns;
-                },
-                columns:[
+                    rowCallback: function( row, data ) {
+                        var columnDef = $iv-controller_aoColumns;
+                        var $row = $(row);
+                        $.each(columnDef,function(index,config){
+                            if(config.type == 'btn.edite'){
+                                var column = $($row.find('td')[index])
+                                column.empty();
+                                column.append($('<span class="update-entity glyphicon glyphicon-pencil" data-entity-id="1" data-model="Contact" data-target-form="contactForm"></span>'));
+                            }else if(config.type == 'btn.delete'){
+                                var column = $($row.find('td')[index])
+                                column.empty();
+                                column.append($('<span class="remove-entity glyphicon glyphicon-trash" data-entity-id="5" data-model="Contact" data-confirm="true"></span>'));
+                            }
+                        });
+                        $(window).trigger('resize');
+                    },
+                    preDrawCallback: function( settings ) {
+                        $iv-controller_aoColumns = settings.aoColumns;
+                    },
+                    columns:[
 
-                ]
-            }
-            $element.find('th').each(function () {
-                var $this = $(this);
-                var colDef = {
-                    data: $this.data('data'),
-                    aTargets: $this.data('atargets'),
-                    title: $this.data('title'),
-                    cellType: $this.data('cell-type'),
-                    className: $this.data('class-name'),
-                    contentPadding: $this.data('content-padding'),
-                    createdCell: $this.data('created-cell'),
-                    defaultContent: $this.data('default-content'),
-                    name: $this.data('name'),
-                    orderable: $this.data('orderable'),
-                    //orderData: $this.data('atargets'),
-                    //orderDataType: $this.data('order-data-type'),
-                    render: $this.data('render'),
-                    searchable: $this.data('searchable'),
-                    type: $this.data('kind'),
-                    visible: $this.data('visible'),
-                    width: $this.data('width'),
-                    bSortable: false
+                    ]
                 }
-                dtOptions.columns.push(colDef);
-                $this.remove();
-            });
-            if('$iv-observe' !== 'false' && '$iv-url' == 'false'){
-                dtOptions.data = [];
-                $element.hide();
-            }else{
-                dtOptions.ajax = {
-                    url : '$iv-url'
+                $element.find('th').each(function () {
+                    var $this = $(this);
+                    var colDef = {
+                        data: $this.data('data'),
+                        aTargets: $this.data('atargets'),
+                        title: $this.data('title'),
+                        cellType: $this.data('cell-type'),
+                        className: $this.data('class-name'),
+                        contentPadding: $this.data('content-padding'),
+                        createdCell: $this.data('created-cell'),
+                        defaultContent: $this.data('default-content'),
+                        name: $this.data('name'),
+                        orderable: $this.data('orderable'),
+                        //orderData: $this.data('atargets'),
+                        //orderDataType: $this.data('order-data-type'),
+                        render: $this.data('render'),
+                        searchable: $this.data('searchable'),
+                        type: $this.data('kind'),
+                        visible: $this.data('visible'),
+                        width: $this.data('width'),
+                        bSortable: false
+                    }
+                    $scope.dtOptions.columns.push(colDef);
+                    $this.remove();
+                });
+                if('$iv-observe' !== 'false' && '$iv-url' == 'false' ){
+                    $scope.dtOptions.data = [];
+                    $element.hide();
+                }else{
+                    $scope.dtOptions.ajax = {
+                        url : '$iv-url'
+                    }
                 }
+                if('$iv-auto-load' === 'true'){
+                    $scope.oTable = $element.find('table').dataTable($scope.dtOptions);
+                }
+
             }
-            $scope.oTable = $element.find('table').dataTable(dtOptions);
-            //window.ofh = new FixedHeader( dt, {
-            //    "offsetTop": 70
-            //});
-        }
-        $scope.initDatatable();
-        if('$iv-observe' !== 'false' && '$iv-url' == 'false'){
-            $scope.$on('$iv-observe', function(event, args) {
-                $scope.reload(args.Data);
-            });
-        }
-        $scope.reload = function(newData){
-            if(newData.length > 0){
-                $element.show();
-                $scope.oTable.fnClearTable();
-                $scope.oTable.fnAddData(newData);
-            }else{
-                $element.hide();
+            $scope.initDatatable();
+            if('$iv-observe' !== 'false'){
+                $scope.$on('$iv-observe', function(event, form) {
+                    $scope.filteringForm = form;
+                    $scope.filteringFormData = form.serialize();
+                    if(!$scope.oTable){
+                        $scope.oTable = $element.find('table').dataTable($scope.dtOptions);
+                    }else{
+                        $scope.reload();
+                    }
+                });
             }
-        }
+            $scope.reload = function(newData){
+                $scope.oTable.fnDraw();
+            }
         }
     </script>
 </control>
