--- a/iWork.Web.UI/Template/Default/Controls/button/delete.html
+++ b/iWork.Web.UI/Template/Default/Controls/button/delete.html
@@ -1,3 +1,9 @@
-﻿<control iv-action="Remove" iv-model="" iv-entity-id="" iv-confirm="false">
-    <span class="remove-entity glyphicon glyphicon-trash" data-entity-id="$iv-entity-id" data-model="$iv-model" data-confirm="$iv-confirm"></span>
+﻿<control iv-action="Remove" 
+         iv-model="" 
+         iv-entity-id="" 
+         iv-confirm="false">
+    <span class="remove-entity glyphicon glyphicon-trash" 
+          data-entity-id="$iv-entity-id" 
+          data-model="$iv-model"
+          data-confirm="$iv-confirm"></span>
 </control>
