--- a/iWork.Web.UI/Template/Default/Controls/grid/column.html
+++ b/iWork.Web.UI/Template/Default/Controls/grid/column.html
@@ -1,6 +1,6 @@
 ﻿<control iv-title="null"
          iv-data="null"
-         iv-atargets="null"
+         iv-targets="null"
          iv-cell-type="td"
          iv-class-name="null"
          iv-content-padding="null"
@@ -8,16 +8,18 @@
          iv-default-content="null"
          iv-name="null"
          iv-orderable="true"
-         iv-order-data-type =""
+         iv-order-data-type=""
          iv-render="null"
          iv-searchable="true"
          iv-kind="null"
          iv-width="null"
-         iv-visible="true">
-
+         iv-visible="true"
+         iv-target-form="false"
+         >
     <th data-title="$iv-title"
+        data-target-form="$iv-target-form"
         data-data="$iv-data"
-        data-atargets="$iv-atargets"
+        data-atargets="$iv-targets"
         data-cell-type="$iv-cell-type"
         data-class-name="$iv-class-name"
         data-content-padding="$iv-content-padding"
