--- a/iWork.Web.UI/Template/Default/Controls/select/select.html
+++ b/iWork.Web.UI/Template/Default/Controls/select/select.html
@@ -1,7 +1,11 @@
-﻿<div class="form-group">
-    <label for="$iv-name" class="col-lg-2 control-label">$iv-label</label>
-    <div class="col-lg-10">
-        <select class="form-control" id="$iv-name">
-        </select>
+﻿<control iv-label="" 
+         iv-name="" >
+    <div class="form-group">
+        <label for="$iv-name" class="col-lg-2 control-label">$iv-label</label>
+        <div class="col-lg-10">
+            <select class="form-control" id="$iv-name">
+                <iv-content></iv-content>
+            </select>
+        </div>
     </div>
-</div>
+</control>
