--- a/iWork.Web.UI/Content/css/style.css
+++ b/iWork.Web.UI/Content/css/style.css
@@ -20,6 +20,7 @@
     animation-duration: 0.5s;
 }
 
+
 @-moz-keyframes dropSubMenu {
     0% {
         -moz-transform: translateX(-100px);
@@ -346,16 +347,7 @@ body {
   -webkit-border-radius: 5px;
   -moz-border-radius: 5px;
   -ms-border-radius: 5px;
-  border-radius: 5px;
-  /*display: block;
-    width: 100%;
-    overflow: visible;
-    padding: 0px !important;
-    margin: 0px !important;
-    position: relative;
-    border-bottom: 1px solid #eeeeee;
-    height:32px;
-    float:right;*/ }
+  border-radius: 5px; }
   .search-box .button-box {
     padding: 0px;
     border: none;
@@ -370,54 +362,6 @@ body {
     -ms-border-radius: 0px;
     border-radius: 0px; }
 
-/*.search-box input {
-    border: none !important;
-    float: left;
-    font-size: 20px;
-    color: #333333;
-    width: 100%;
-    position:absolute;
-    margin:0px;
-    left:28px;
-    height:27px;
-}
-
-.search-box input:focus,
-.search-box input{
-    outline:none;
-}
-
-.search-box span.search-box-icon {
-    display: block;
-    position: absolute;
-    top: 2px;
-    width: 22px;
-    left: 0px;
-    font-size: 22px;
-    color: #999999;
-
-}
-
-.search-box button {
-    display: block;
-    position: absolute;
-    right: 0px;
-    top: 0px;
-    width: 80px;
-    height: 32px;
-    line-height: 32px;
-    text-align: center;
-    background: #eeeeee;
-    border: none;
-    color: #333333;
-    padding: 0px;
-    @include border-radius(3px);
-}
-    .search-box button.disabled {
-    background: #eeeeee;
-}
-
-*/
 .search-box-message {
   display: block;
   font-size: 11px;
@@ -451,17 +395,17 @@ body {
   padding-right: 0px;
   padding-left: 0px; }
 
-.form-horizontal .form-group input {
+.form-horizontal .form-group textarea, .form-horizontal .form-group select, .form-horizontal .form-group input {
   border: none;
   border-bottom: 1px solid #eeeeee;
-  -webkit-border-radius: 0px;
-  -moz-border-radius: 0px;
-  -ms-border-radius: 0px;
-  border-radius: 0px;
   box-shadow: none;
   -moz-box-shadow: none;
   -webkit-box-shadow: none;
-  color: #333333 !important; }
+  color: #333333 !important;
+  -webkit-border-radius: 0px;
+  -moz-border-radius: 0px;
+  -ms-border-radius: 0px;
+  border-radius: 0px; }
 
 ::-webkit-input-placeholder {
   /* WebKit browsers */
@@ -496,6 +440,23 @@ body {
   margin: 0px auto 0px auto;
   background-image: url("../img/loading.gif"); }
 
+/* Checklist
+===================================*/
+.checklist .checkbox-label-column {
+  display: none; }
+.checklist .form-group, .checklist .checkbox-input-column {
+  width: auto;
+  float: left;
+  padding-left: 0px; }
+.checklist div .form-group {
+  margin-top: 0 !important;
+  padding-top: 0 !important; }
+.checklist .control-label {
+  margin-top: 0px;
+  padding-top: 0px; }
+
+/* Radio list
+===================================*/
 /* Iconic button
 ==================================*/
 .btn-iconic {
