--- a/iWork.Web.UI/Content/css/control.css
+++ b/iWork.Web.UI/Content/css/control.css
@@ -132,6 +132,9 @@
   -ms-border-radius: 0px;
   border-radius: 0px; }
 
+.form-horizontal .done-btn {
+  display: none; }
+
 ::-webkit-input-placeholder {
   /* WebKit browsers */
   color: #cccccc !important; }
