--- a/iWork.Web.UI/Content/css/control.scss
+++ b/iWork.Web.UI/Content/css/control.scss
@@ -141,6 +141,10 @@
     @include border-radius(0px);
 }
 
+.form-horizontal .done-btn{
+    display:none;
+}
+
 
 
 ::-webkit-input-placeholder { /* WebKit browsers */
