--- a/iWork.Web.UI/Template/Default/Layout/Default.html
+++ b/iWork.Web.UI/Template/Default/Layout/Default.html
@@ -12,8 +12,10 @@
     <link rel="stylesheet" type="text/css" href="/Content/lib/dropzone.css" />
     <link rel="stylesheet" type="text/css" href="/Content/lib/datatables/css/dataTables.bootstrap.css" />
     <link rel="stylesheet" type="text/css" href="/Content/lib/datetimepicker/css/bootstrap-datetimepicker.css" />
+    <link rel="stylesheet" type="text/css" href="/Content/lib/bootstrap-switch/css/bootstrap-switch.css" />
 
-    <link rel="stylesheet" type="text/css" href="/Content//lib/datatables/extensions/FixedHeader/css/dataTables.fixedHeader.css" />
+
+    <link rel="stylesheet" type="text/css" href="/Content/lib/magicsugges/magicsuggest-min.css" />
 
     <link rel="stylesheet" href="/Content/css/style.css" media="screen">
 
@@ -25,8 +27,9 @@
     <script src="/Content/lib/datatables/js/dataTables.bootstrap.js"></script>
     <script src="/Content/Scripts/angular.min.js"></script>
     <script src="/Content/lib/angular-datatables/angular-datatables.js"></script>
+    <script src="/Content/lib/bootstrap-switch/js/bootstrap-switch.js"></script>
 
-    <script src="/Content/lib/datatables/extensions/FixedHeader/js/dataTables.fixedHeader.js"></script>
+    <script src="/Content/lib/magicsugges/magicsuggest.js"></script>
 
     <script type="text/javascript" src="/Content/lib/slick/slick.min.js"></script>
     <script type="text/javascript" src="/Content/lib/jquery.svginject.js"></script>
