--- a/iWork.Web.UI/Template/Default/Controls/checkbox/checkbox.html
+++ b/iWork.Web.UI/Template/Default/Controls/checkbox/checkbox.html
@@ -1,4 +1,7 @@
-﻿<control iv-input-type="text" iv-required="false" iv-minlength="" iv-maxlength="" iv-pattern="" iv-change="">
+﻿<control iv-label=""
+         iv-checked="false"
+         iv-required="false" 
+         >
     <div class="form-group">
         <div class="col-lg-2 checkbox-label-column"></div>
         <div class="col-lg-10 checkbox-input-column">
@@ -10,10 +13,7 @@
                        placeholder="$iv-label"
                        ng-model="$iv-model.$iv-name"
                        ng-required="$iv-required"
-                       ng-minlength="$iv-minlength"
-                       ng-maxlength="$iv-maxlength"
-                       ng-pattern="$iv-pattern"
-                       ng-change="$iv-change" />
+                       ng-checked="$iv-checked" />
                 <span>
                     $iv-label
                 </span>
