--- a/iWork.Web.UI/Template/Default/Controls/radio/radio.html
+++ b/iWork.Web.UI/Template/Default/Controls/radio/radio.html
@@ -1,16 +1,13 @@
-﻿<control iv-label="Radio Item" iv-change="">
+﻿<control iv-label="Radio Item"  
+         iv-checked="false">
 
     <label for="id$iv-id" class="control-label">
-
         <input type="radio"
                class="form-control"
                name="$iv-name"
                id="id$iv-id"
-               value="$iv-value"
-               placeholder="$iv-label"
                ng-model="$iv-model.$iv-name"
-               ng-required="$iv-required"
-               ng-change="$iv-change" />
+               ng-checked="$iv-checked"/>
         <span>
             $iv-label
         </span>
