Work on validation

--- a/iWork.Web.UI/Template/Default/Controls/form/form.html
+++ b/iWork.Web.UI/Template/Default/Controls/form/form.html
@@ -65,6 +65,7 @@
                 $scope.$form.find('input').removeAttr('disabled');
                 $scope.$form.find('button').show();
                 $scope.$form.find('.done-btn').hide();
+                $scope.submitted = false;
             }
             /* Submit Form
           ---------------------------------------*/
